2007-08-15  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/relbrlt.s (.text.pad2): Adjust space.
	* ld-powerpc/relbrlt.d: Update.
	* ld-powerpc/tlsexe.d: Update.
	* ld-powerpc/tlsexe.g: Update.
	* ld-powerpc/tlsexe.r: Update.
	* ld-powerpc/tlsexetoc.d: Update.
	* ld-powerpc/tlsexetoc.g: Update.
	* ld-powerpc/tlsexetoc.r: Update.
	* ld-powerpc/tlsso.d: Update.
	* ld-powerpc/tlsso.g: Update.
	* ld-powerpc/tlsso.r: Update.
	* ld-powerpc/tlstocso.d: Update.
	* ld-powerpc/tlstocso.g: Update.

2007-08-06  Kai Tietz   <kai.tietz@onevision.com>

	* ld-pe/pe.exp: Special diff file for x86_64-mingw target.
	* ld-pe/secrel_64.d: New.

2007-08-03  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-srec/srec.exp: XFAIL for powerpc*-*-*.

2007-08-01  Adam Nemet  <anemet@caviumnetworks.com>

	* ld-mips-elf/reloc-4.s, ld-mips-elf/reloc-4.d,
	ld-mips-elf/reloc-5.s, ld-mips-elf/reloc-5.d: New tests.
	* ld-mips-elf/mips-elf.exp: Invoke them.

2007-07-29  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/weak-dyn-1.rd: Adjust.

2007-07-25  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-cdtest/cdtest-foo.cc (strncpy): Fix parameter name.

2007-07-24  Nick Clifton  <nickc@redhat.com>

	* ld-arm/arm-elf.exp: Move EABI attribute tests into EABI only
	section.

2007-07-23  Richard Sandiford  <richard@codesourcery.com>

	* ld-elf/weak-dyn-1a.s, ld-elf/weak-dyn-1b.s, ld-elf/weak-dyn-1.ld,
	* ld-elf/weak-dyn-1.rd: New test.
	* ld-elf/elf.exp: Run it.

2007-07-13  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-scripts/assert.t: Tweak to avoid relying on empty's VMA being
	zero.

2007-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elfvers/vers.exp: Add tests for --defsym.

	* ld-elfvers/vers32.map: Likewise.
	* ld-elfvers/vers32a.c: Likewise.
	* ld-elfvers/vers32a.dsym: Likewise.
	* ld-elfvers/vers32a.ver: Likewise.
	* ld-elfvers/vers32b.c: Likewise.
	* ld-elfvers/vers32b.dsym: Likewise.
	* ld-elfvers/vers32b.ver: Likewise.
	* ld-elfvers/vers32c.dsym: Likewise.