@@ -1,3 +1,8 @@
+2007-08-16  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-srec/srec.exp: Always pass "-G 0".  Remove all powerpc
+	xfails.
+
 2007-08-15  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-powerpc/relbrlt.s (.text.pad2): Adjust space.
